v0.10.2/_sources/generated/statsmodels.stats.outliers_influence.GLMInfluence.rst.txt
statsmodels.stats.outliers\_influence.GLMInfluence
==================================================

.. currentmodule:: statsmodels.stats.outliers_influence

.. autoclass:: GLMInfluence

   

   .. HACK -- the point here is that we don't want this to appear in the output, but the autosummary should still generate the pages.
      .. autosummary::
         :toctree:
      
         GLMInfluence.cooks_distance
         GLMInfluence.d_fittedvalues
         GLMInfluence.d_params
         GLMInfluence.dfbetas
         GLMInfluence.hat_matrix_diag
         GLMInfluence.params_one
         GLMInfluence.plot_index
         GLMInfluence.plot_influence
         GLMInfluence.resid_studentized
         GLMInfluence.summary_frame



   

   .. HACK -- the point here is that we don't want this to appear in the output, but the autosummary should still generate the pages.
      .. autosummary::
         :toctree:
      
         GLMInfluence.d_fittedvalues_scaled
         GLMInfluence.d_linpred
         GLMInfluence.d_linpred_scaled

