v0.15.0/_sources/generated/statsmodels.stats.outliers_influence.GLMInfluence.rst.txt
statsmodels.stats.outliers\_influence.GLMInfluence
==================================================

.. currentmodule:: statsmodels.stats.outliers_influence

.. autoclass:: GLMInfluence
   :exclude-members: plot_index,plot_influence,resid_score,resid_score_factor,summary_frame,

   
   
   .. rubric:: Methods

   .. autosummary::
      :toctree:

      ~GLMInfluence.plot_index
      ~GLMInfluence.plot_influence
      ~GLMInfluence.resid_score
      ~GLMInfluence.resid_score_factor
      ~GLMInfluence.summary_frame
   
   
   

   
   
   .. rubric:: Properties

   .. autosummary::
      :toctree:

      ~GLMInfluence.cooks_distance
      ~GLMInfluence.d_fittedvalues
      ~GLMInfluence.d_fittedvalues_scaled
      ~GLMInfluence.d_linpred
      ~GLMInfluence.d_linpred_scaled
      ~GLMInfluence.d_params
      ~GLMInfluence.dfbetas
      ~GLMInfluence.hat_matrix_diag
      ~GLMInfluence.hat_matrix_exog_diag
      ~GLMInfluence.params_one
      ~GLMInfluence.resid_studentized
   
   
   